--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,36 @@
   <meta charset="utf-8">
   <title>Analizador de texto</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="index.js" type="module"></script>
 </head>
 
+
+
 <body>
-  <script src="index.js" type="module"></script>
+ 
+  <header>
+  <h1>  Analizador de texto </h1>
+</header>
+
+<div id ="cuadroTexto">
+<textarea rows="15" cols="100"  name="user-input"  type="input" ></textarea><br>
+</div>
+<br><button  id="reset-button"  type="button" >Borrar</button>
+
+
+<ul  class="lista">
+  <li class= "metricas">Cantidad de palabras: </li>
+  <li class= "metricas">Cantidad de caracteres:</li>
+  <li class= "metricas">Cantidad de caracteres sin espacios:</li>
+  <li class= "metricas">Cantidad de numeros:</li>
+  <li class= "metricas">La suma de numeros es:</li>
+  <li class= "metricas">Longitud promedio de las plabras:</li>  
+</ul>
+
+
+<footer><p>Ana Rojas </p></footer>
+
 </body>
+<script src="index.js" type="module"></script>
 </html>
+
